<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".actividades.views.RegistroActivity"
    tools:showIn="@layout/activity_registro">

    <LinearLayout
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding_left_app"
        android:paddingEnd="@dimen/padding_right_app"
        android:paddingTop="@dimen/padding_top_app"
        android:paddingBottom="@dimen/padding_bot_app"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv-registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/primaryTextDark"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:text="@string/su_name" />

        <EditText
            android:id="@+id/et-usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_usuario"/>

        <EditText
            android:id="@+id/et-nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/et-apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_apellido"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/et-nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de Nacimiento"
            android:inputType="date"/>

        <EditText
            android:id="@+id/et-celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_cel"
            android:inputType="phone"
            android:digits="0123456789"/>

        <EditText
            android:id="@+id/et-email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et-contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_contra"
            android:inputType="textVisiblePassword"/>

        <Button
            android:id="@+id/btn-registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/btn_registrar"
            android:textSize="@dimen/btn_txt_size"
            android:onClick="goHome"
            />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>